# POS2022-pong

./: CMakeLists.txt  client.cpp  client.h  main.cpp  server.cpp  server.h
Ball/: Ball.cpp  Ball.h
FileHandling/: FileRead.cpp  FileRead.h  FileWrite.cpp  FileWrite.h
Game/: Game.cpp  Game.h
Platform/: Platform.cpp  Platform.h
ThreadData/: ThreadData.h
client/: client.cpp  client.h
server/: server.cpp  server.h
